# sarcastic_llm

./: .gitignore  LICENSE  README.md  datasource.txt  finetuning.md  llm_model.ipynb  main.py  multi_head_attention_with_dataloders.ipynb  natural_language_capabilities.ipynb  pre_training.ipynb  pretraining.ipynb  pyproject.toml  sample_question_answers.txt  sarcasm_data.ipynb  untrained_model.py  use_final_model.ipynb
setup_pretrainning/: data_preparation_english.ipynb  finetuning.ipynb  multi_head_attention_with_dataloders.ipynb  natural_language_capabilities.ipynb  pre_training.ipynb  pretraining.ipynb  pretraining_small.ipynb  sarcasm_data.ipynb  untrained_model.py  use_final_model.ipynb
